compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__errors_trait_method_trait_bounds_not_met_in_apply_method.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn bar<T>() -> () where T is NotFoo {

}



Diagnostics

[E0019] Error: where predicate in apply declaration method does not match trait declaration
    ,-[ main.flx:14:15]
    |
  4 |     fn bar<T>() where T is Foo;
    |                    |    ^|^  
    |                    `--------- generic parameter `T` with trait bound `Foo`
    |                          |   
    |                          `--- where predicate in trait declaration method `Foo`
    | 
 14 |     fn bar<T>() where T is NotFoo {
    |          |    ^^^|^^  
    |          `------------ generic parameter `T` needs the trait bound `Foo`
    |                  |    
    |                  `---- where predicate in apply declaration method `NotFoo`
----'
[E0021] Error: unused generic parameters
    ,-[ main.flx:13:18]
    |
 13 | apply Bar to Bazz {
    |                  ^|^  
    |                   `--- unused generic parameters `T`
----'

