compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__errors_trait_restrictions_not_met_in_assoc_type.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0



Diagnostics

[E0043] Error: trait restrictions not met
    ,-[ main.flx:11:4]
    |
  7 |     type A is Bar + Bazz;
    |         ^|^   ^^|^  
    |          `---------- restriction `Bar` defined here
    |                 |   
    |                 `--- restriction `Bazz` defined here
    | 
 11 |     type A = u32;
    |    ^|^  
    |     `--- trait restrictions `Bar`, `Bazz` not met for type `u32`
----'

