compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__errors_unknown_generic_in_function_where_predicate.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn foo<T>() -> u32 where X is Foo {
0
}



Diagnostics

[E0005] Error: unknown generic used in where predicate
   ,-[ main.flx:5:22]
   |
 5 | fn foo<T>() -> u32 where X is Foo {
   |   ^|^                |  
   |    `-------------------- generic parameters `T` declared here
   |                      |  
   |                      `-- unknown generic `X` used in where predicate
---'
[E0021] Error: unused generic parameters
   ,-[ main.flx:5:3]
   |
 5 | fn foo<T>() -> u32 where X is Foo {
   |   ^|^  
   |    `--- unused generic parameters `T`
---'

