compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__errors_unknown_trait_in_trait_assoc_type.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0



Diagnostics

[E0011] Error: unresolved trait
   ,-[ main.flx:4:12]
   |
 4 |     type A is Bar + Bazz;
   |            ^|^  
   |             `--- unresolved trait `Bar`
---'
[E0011] Error: unresolved trait
   ,-[ main.flx:4:18]
   |
 4 |     type A is Bar + Bazz;
   |                  ^^|^  
   |                    `--- unresolved trait `Bazz`
---'

