compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__errors_unknown_trait_in_where_predicate.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn foo<T>() -> () where T is Foo {

}



Diagnostics

[E0011] Error: unresolved trait
   ,-[ main.flx:3:22]
   |
 3 | fn foo<T>() where T is Foo {}
   |                      ^|^  
   |                       `--- unresolved trait `Foo`
---'
[E0021] Error: unused generic parameters
   ,-[ main.flx:3:5]
   |
 3 | fn foo<T>() where T is Foo {}
   |     ^|^  
   |      `--- unused generic parameters `T`
---'

