compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__errors_unused_generics_in_function.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn foo<X, Y>(x X) -> X {
x
}



Diagnostics

[E0021] Error: unused generic parameters
   ,-[ main.flx:3:5]
   |
 3 | fn foo<X, Y>(x X) -> X {
   |     ^^^|^^  
   |        `---- unused generic parameters `Y`
---'

