compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__errors_unused_generics_in_struct.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.rs
Module Id: 0



Diagnostics

[E0020] Error: unused generic parameters
   ,-[ main.rs:3:10]
   |
 3 | struct Bazz<T> {}
   |          ^|^  
   |           `--- unused generic parameters `T`
---'
[E0020] Error: unused generic parameters
   ,-[ main.rs:5:8]
   |
 5 | struct Bazz<A, B, C> {
   |        ^^^^|^^^^  
   |            `------ unused generic parameters `B`, `C`
---'

