compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__methods_do_not_belong_in_apply.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
//  main.flx

trait Foo {
    
    pub fn foo() -> ();
    pub fn bar() -> ();
    pub fn bazz() -> ();
}

struct Bar {
}

apply Foo to Bar {
    
    fn test() -> () {
        
    }
}


Diagnostics

[E0016] Error: unimplemented trait methods in apply
    ,-[ main.flx:11:8]
    |
  4 |         fn foo();
    |         ^|^  
    |          `--- method `foo` defined here
  5 |         fn bar();
    |        ^|^  
    |         `--- method `bar` defined here
  6 |         fn bazz();
    |       ^^|^  
    |         `--- method `bazz` defined here
    | 
 11 | ,-> apply Foo to Bar {
 12 | |->     fn test() {}
    | |                      
    | `---------------------- unimeplemented trait methods `bar`, `bazz`, `foo` in apply
----'
[E0017] Error: methods do not belong in apply
    ,-[ main.flx:11:8]
    |
  3 | ,-> trait Foo {
    : :   
  6 | |->     fn bazz();
    | |                    
    | `-------------------- trait methods `bar`, `bazz`, `foo` declared here
    | 
 11 |     apply Foo to Bar {
    |                    ^^|^  
    |                      `--- method `test` defined here
----'

